--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,138 @@
-/* You can add global styles to this file, and also import other style files */
+/* XS */
+@media (min-width: 475px) {}
+
+/* S */
+@media (min-width: 640px) {}
+
+/* M */
+@media (min-width: 768px) {}
+
+/* L */
+@media (min-width: 1024px) {}
+
+/* XL */
+@media (min-width: 1280px) {}
+/* 2XL */
+@media (min-width: 1536px) {}
+
+:root {
+  /* Colors */
+  --clr-dark: #070a13;
+  --clr-light: #f1f5f9;
+  --clr-slate400: #94a3b8;
+  --clr-slate600: #475569;
+  --clr-slate800: #1e293b;
+  --clr-rose: #e11d48;
+  --clr-indigo: #4f46e5;
+
+  /* Sizes */
+  --size-xxs: 0.5rem;
+  --size-xs: 0.75rem;
+  --size-s: 0.875rem;
+  --size-base: 1rem;
+  --size-l: 1.125rem;
+  --size-xl: 1.25rem;
+  --size-2xl: 1.5rem;
+  --size-3xl: 1.875rem;
+  --size-4xl: 2.25rem;
+  --size-5xl: 3rem;
+  --size-6xl: 4.75rem;
+  --size-7xl: 4rem;
+  --size-8xl: 6rem;
+  --size-9xl: 8rem;
+  --size-10xl: 10rem;
+}
+
+* {
+  font-family: "General Sans", sans-serif;
+  margin: 0;
+  line-height: calc(1em + 0.5rem);
+  color: var(--clr-light);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: var(--clr-dark);
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+button {
+  display: inline-block;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+a, a:visited {
+  text-decoration: none;
+  color: var(--clr-rose);
+}
+
+strong {
+  color: #4f46e5;
+}
+
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border: 1px solid red;
+} 
+
+/* XS */
+@media (min-width: 475px) {
+  .container {
+    max-width: 475px;
+  }
+}
+
+/* S */
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+/* M */
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+/* L */
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+/* XL */
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+/* 2XL */
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+} 
