Adicionada seção - sobre mim

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,10 @@
 <main class="hero container">
 	<img src="https://files.fm/thumb_show.php?i=4ujmrv27h" alt="my photo" />
 	<h2>Olá! Eu sou o João 😁</h2>
-	<h1>Desenvolvedor Júnior</h1>
+	<h1>Front-End<br>Angular developer</h1>
 	<p>
 		<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na minha jornada de
-		aprendizado e crescimento! Sou proativo, organizado e focado, minhas <strong>principais habilidades são: HTML, CSS, TypeScript e Angular.</strong> 
+		aprendizado e crescimento! Sou proativo, organizado e focado, <strong>principais habilidades: HTML, CSS, TypeScript e Angular.</strong> 
 	</p>
 	<a href="#contact"> <app-btn btnText="MEU CONTATO"></app-btn></a>
 </main>
