Adicionado projeto em destaque

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,10 @@
     <app-main />
     <app-gap />
     <app-about />
+    <app-gap />
+    <app-featured />
+    <app-featured-images />
 </main>
 <footer>
-
+    
 </footer>
