--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
 	<ul>
 		<li><a href="#about">Sobre</a></li>
-		<li><a href="#feat">Projetos</a></li>
+		<li><a href="#featured">Projetos</a></li>
 		<li><a href="#contact">Contato</a></li>
 		<li class="verticalLine"></li>
 		<li>
@@ -22,22 +22,7 @@
 			</button>
 		</li>
 		<li class="button">
-			<a href="#resume"><app-btn btnText="Currículo"></app-btn></a>
+			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="https://files.fm/f/esnj67fpc"></app-btn>
 		</li>
 	</ul>
-	<button class="barMenu">
-		<svg
-			xmlns="http://www.w3.org/2000/svg"
-			fill="none"
-			viewBox="0 0 24 24"
-			stroke-width="1.5"
-			stroke="currentColor"
-		>
-			<path
-				stroke-linecap="round"
-				stroke-linejoin="round"
-				d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-			/>
-		</svg>
-	</button>
 </nav>
