--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,19 @@
 <header class="header container">
-    <app-nav />
+	<app-nav />
+	<app-mobile-nav />
 </header>
 <main>
-    <app-main />
-    <app-gap />
-    <app-about />
-    <app-gap />
-    <app-featured />
-    <app-featured-images />
+	<app-main />
+	<app-gap />
+	<app-about id="about"/>
+	<app-gap />
+	<app-featured id="featured"/>
+	<app-featured-images />
+	<app-gap />
+	<app-projects />
+	<app-gap />
+	<app-contact id="contact"/>
 </main>
 <footer>
-    
+	<app-footer />
 </footer>
