Adicionada a base de dados para os projetos do portifólio.

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,16 +2,24 @@
 	<aside class="aboutContent">
 		<h2 class="aboutTitle">Sobre mim</h2>
 		<p>
-			<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na
-			minha jornada de aprendizado e crescimento! Sou proativo, organizado e
-			focado,
-			<strong>principais habilidades: HTML, CSS, TypeScript e Angular.</strong>
+			Meu nome é João, eu tenho 17 anos e estou atualmente
+			<strong>
+				cursando ciência da computação da universidade Cruzeiro do Sul, estou no
+				semestre 1 / 8 </strong
+			>, porém grande parte dos meus conhecimentos eu adquiri por fora através
+			de estudos principalmente na plataforma <strong> DIO </strong>.
 		</p>
 		<p>
-			<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na
-			minha jornada de aprendizado e crescimento! Sou proativo, organizado e
-			focado,
-			<strong>principais habilidades: HTML, CSS, TypeScript e Angular.</strong>
+			Eu sempre fui apaixonado pelo mundo da tecnologia e programação, quanto
+			mais eu aprendo sobre programação e o mundo tech mais eu quero aprender,
+			caso você queira me conhecer um pouco mais, você consegue me encontrar no
+			<a
+				href="https://www.linkedin.com/in/joao-victor-ferreira-de-paula-b59943261/"
+			>
+				Linkedin </a
+			>e no
+			<a href="https://www.instagram.com/joaspasqualetto/"> Instagram </a> (só
+			mandar a solicitação que eu aceito ^o^).
 		</p>
 		<hr />
 		<h3 class="aboutSubitle">Conhecimentos em</h3>
@@ -24,7 +32,10 @@
 			<li>TypeScript</li>
 		</ul>
 	</aside>
-    <figure>
-        <img src="https://files.fm/thumb_show.php?i=venyc97c3" alt="My photo">
-    </figure>
+	<figure>
+		<img
+			src="https://vc689.pcloud.com/dpZ1ekpWdZcoCugcZYvys7ZZWrano7ZNVZZJLRZZAbcfr4PjqXFhpJUCkN26YXY3RgqX/20221224_210406~2.jpg"
+			alt="My photo"
+		/>
+	</figure>
 </section>
