--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,10 +1,18 @@
 <main class="hero container">
-	<img src="https://files.fm/thumb_show.php?i=4ujmrv27h" alt="my photo" />
+	<img
+		src="https://vc689.pcloud.com/dpZ1ekpWdZcoCugcZYvys7ZZWrano7ZNVZZJLRZZAbcfr4PjqXFhpJUCkN26YXY3RgqX/20221224_210406~2.jpg"
+		alt="my photo"
+	/>
 	<h2>Olá! Eu sou o João 😁</h2>
-	<h1>Front-End<br>Angular developer</h1>
+	<h1>Front-End<br />Angular developer</h1>
 	<p>
-		<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na minha jornada de
-		aprendizado e crescimento! Sou proativo, organizado e focado, <strong>principais habilidades: HTML, CSS, TypeScript e Angular.</strong> 
+		<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na minha
+		jornada de aprendizado e crescimento! <br />
+		<strong>Principais habilidades: HTML, CSS, TypeScript e Angular.</strong>
 	</p>
-	<a href="#contact"> <app-btn btnText="MEU CONTATO"></app-btn></a>
+	<app-btn
+		btnText="MEU CONTATO"
+		btnTarget="_blank"
+		btnLink="mailto:joaoferreirapaula005@gmail.com"
+	/>
 </main>
