--- a/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/src/app/components/mobile-nav/mobile-nav.component.html
@@ -51,7 +51,7 @@
 			<app-btn
 				btnText="Currículo"
 				btnTarget="_blank"
-				btnLink="https://files.fm/f/esnj67fpc"
+				btnLink="https://u.pcloud.link/publink/show?code=XZ2HVtVZ4wRmvTb2HMfQv4DDQmuNrbUvCUFy"
 			></app-btn>
 		</li>
 	</ul>
