--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,16 +1,13 @@
 <section class="work container">
 	<h2 class="workTitle">Projetos</h2>
 	<p class="workDescription">
-		Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, omnis commodi
-		obcaecati quia rem eveniet tenetur esse, officiis dolor soluta assumenda
-		dicta saepe, provident in ea. Repellat in maiores magni?
+		Aqui estão alguns dos projetos que eu desenvenvolvi durante minha jornada de desenvolvedor. Apesar de alguns deles serem simples e básicos ainda sinto orgulho deles pois todos fazem parte da minha jornada de aprendizado e sinto orgulho em dizer que eu fui o responsável por programar cada um deles.
 	</p>
 	<!-- Projects -->
 	<div class="projectsDescriptionContainer">
-		<app-projects-images projectName="teste1" />
-		<app-inverse-projects-images projectName="teste2" />
-		<app-projects-images projectName="teste3" />
-		<app-inverse-projects-images projectName="teste4" />
-		<app-projects-images projectName="teste5" />
+		<app-projects-images projectId="1" />
+		<app-projects-images gridType="inverse" projectId="2" />
+		<app-projects-images projectId="3" />
+		<app-projects-images projectId="4" gridType="inverse" />
 	</div>
 </section>
