--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,14 @@
 <section class="contact container">
-    <h2 class="contactTitle">Me contate!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias inventore officia, ipsum nisi consectetur tempore eos debitis nemo itaque iusto laborum in animi, cum, distinctio rerum quaerat unde veniam beatae.</p>
-    <app-btn btnText="Meu contato" btnTarget="_blank" btnLink="https://www.youtube.com/watch?v=dLDn_k8GmaU&t=7310s&ab_channel=SlayingTheDragon"/>
+	<h2 class="contactTitle">Me contate!</h2>
+	<p>
+		Esse portifólio é um projeto do qual eu sinto muito orgulho, assim como
+		todos os projetos presentes nele, eu amo aprender mais e crescer como um
+		programador, por isso caso você precise de um programdor, aqui está meu
+		contato 🙂
+	</p>
+	<app-btn
+		btnText="Contato"
+		btnTarget="_blank"
+		btnLink="mailto:joaoferreirapaula005@gmail.com"
+	/>
 </section>
