--- a/src/app/components/featured-images/featured-images.component.html
+++ b/src/app/components/featured-images/featured-images.component.html
@@ -1,20 +1,20 @@
 <figure class="container">
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 1">
+        <img src="{{featuredImages[0]}}" alt="Project Image 1">
     </div>
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 2">
+        <img src="{{featuredImages[1]}}" alt="Project Image 2">
     </div>
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 3">
+        <img src="{{featuredImages[2]}}" alt="Project Image 3">
     </div>
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 4">
+        <img src="{{featuredImages[3]}}" alt="Project Image 4">
     </div>
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 5">
+        <img src="{{featuredImages[4]}}" alt="Project Image 5">
     </div>
     <div class="imageWrapper">
-        <img src="http://via.placeholder.com/640x360" alt="Project Image 6">
+        <img src="{{featuredImages[5]}}" alt="Project Image 6">
     </div>
 </figure>
