--- a/src/app/components/projects-images/projects-images.component.css
+++ b/src/app/components/projects-images/projects-images.component.css
@@ -12,12 +12,11 @@
 	justify-content: center;
 	align-items: center;
 	position: relative;
-    order: 1;
 }
 
 .imageWrapper::after {
 	content: "";
-	background-color: rgba(79, 70, 229, 0.35);
+	background-color: rgba(79, 70, 229, 0.25);
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -28,7 +27,7 @@
 }
 
 .imageWrapper:hover::after {
-	background-color: rgba(79, 70, 229, 0.2);
+	background-color: rgba(79, 70, 229, 0.1);
 }
 
 .gridProjectTitle {
@@ -36,14 +35,14 @@
     margin: 0;
 }
 
-.projectDetails {
-    order: 2;
-}
-
 .description1 {
 	font-size: var(--size-s);
 	color: var(--clr-slate600);
 	margin: 0.5rem 0;
+}
+
+.description1 {
+	transform: scale(1.1);
 }
 
 .description2 {
@@ -134,11 +133,6 @@
 @media (min-width: 1536px) {
     .gridProjectTitle {
 		font-size: var(--size-4xl);
-	}
-
-	.description1,
-	.description2 {
-		font-size: var(--size-3xl);
 	}
 
 	.projectContainer {
