--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
 	<app-gap />
 	<app-about id="about"/>
 	<app-gap />
-	<app-featured id="featured"/>
+	<app-featured numId=1 id="featured"/>
 	<app-featured-images />
 	<app-gap />
 	<app-projects />
