--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,10 +5,10 @@
 		<li><a href="#contact">Contato</a></li>
 		<li class="verticalLine"></li>
 		<li>
-			<button class="lightMode">
+			<button class="lightMode" (click)="toggleTheme()">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
+					fill="fill"
 					viewBox="0 0 24 24"
 					strokeWidth="{1.5}"
 					stroke="currentColor"
