--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,14 +5,14 @@
 <main>
 	<app-main />
 	<app-gap />
-	<app-about id="about"/>
+	<app-about id="about" />
 	<app-gap />
-	<app-featured numId=1 id="featured"/>
+	<app-featured numId="1" id="featured" />
 	<app-featured-images />
 	<app-gap />
 	<app-projects />
 	<app-gap />
-	<app-contact id="contact"/>
+	<app-contact id="contact" />
 </main>
 <footer>
 	<app-footer />
