--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -34,7 +34,7 @@
 	</aside>
 	<figure>
 		<img
-			src="https://vc689.pcloud.com/dpZ1ekpWdZcoCugcZYvys7ZZWrano7ZNVZZJLRZZAbcfr4PjqXFhpJUCkN26YXY3RgqX/20221224_210406~2.jpg"
+			src="assets/images/myphoto.jpg"
 			alt="My photo"
 		/>
 	</figure>
