--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <main class="hero container">
 	<img
-		src="https://vc689.pcloud.com/dpZ1ekpWdZcoCugcZYvys7ZZWrano7ZNVZZJLRZZAbcfr4PjqXFhpJUCkN26YXY3RgqX/20221224_210406~2.jpg"
+		src="assets/images/myphoto.jpg"
 		alt="my photo"
 	/>
 	<h2>Olá! Eu sou o João 😁</h2>
