--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <main class="hero container">
 	<img
-		src="assets/images/myphoto.jpg"
+		src="assets/images/myPhotoMain.jpg"
 		alt="my photo"
 	/>
 	<h2>Olá! Eu sou o João 😁</h2>
