--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
 			</button>
 		</li>
 		<li class="button">
-			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="https://u.pcloud.link/publink/show?code=XZ2HVtVZ4wRmvTb2HMfQv4DDQmuNrbUvCUFy" />
+			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="http://u.pc.cd/dDnrtalK" />
 		</li>
 	</ul>
 </nav>
