Update no currículo tradicional

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
 			</button>
 		</li>
 		<li class="button">
-			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="http://u.pc.cd/dDnrtalK" />
+			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="http://u.pc.cd/gVkotalK" />
 		</li>
 	</ul>
 </nav>
