--- a/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/src/app/components/mobile-nav/mobile-nav.component.html
@@ -55,7 +55,7 @@
 			<app-btn
 				btnText="Currículo"
 				btnTarget="_blank"
-				btnLink="https://u.pcloud.link/publink/show?code=XZ2HVtVZ4wRmvTb2HMfQv4DDQmuNrbUvCUFy"
+				btnLink="http://u.pc.cd/gVkotalK"
 			></app-btn>
 		</li>
 	</ul>
