Consertado link para o currículo

--- a/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/src/app/components/mobile-nav/mobile-nav.component.html
@@ -55,7 +55,7 @@
 			<app-btn
 				btnText="Currículo"
 				btnTarget="_blank"
-				btnLink="http://u.pc.cd/gVkotalK"
+				btnLink="http://u.pc.cd/th0rtalK"
 			></app-btn>
 		</li>
 	</ul>
