Atualizado projeto principal e pequenos ajustes

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,40 +2,35 @@
 	<aside class="aboutContent">
 		<h2 class="aboutTitle">Sobre mim</h2>
 		<p>
-			Meu nome é João, eu tenho 17 anos e estou atualmente
+			Meu nome é João, tenho {{ idade }} anos, atualmente
 			<strong>
-				cursando ciência da computação da universidade Cruzeiro do Sul, estou no
-				semestre 1 / 8 </strong
-			>, porém grande parte dos meus conhecimentos eu adquiri por fora através
-			de estudos principalmente na plataforma <strong> DIO </strong>.
+				curso ciência da computação da universidade Cruzeiro do Sul, e tenho
+				previsão de formação para Dezembro/2026</strong
+			>
 		</p>
 		<p>
 			Eu sempre fui apaixonado pelo mundo da tecnologia e programação, quanto
 			mais eu aprendo sobre programação e o mundo tech mais eu quero aprender,
 			caso você queira me conhecer um pouco mais, você consegue me encontrar no
 			<a
-				href="https://www.linkedin.com/in/joao-victor-ferreira-de-paula-b59943261/"
+				href="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
+				target="_blank"
 			>
-				Linkedin </a
-			>e no
-			<a href="https://www.instagram.com/joaspasqualetto/"> Instagram </a> (só
-			mandar a solicitação que eu aceito ^o^).
+				Linkedin
+			</a>
 		</p>
 		<hr />
 		<h3 class="aboutSubitle">Conhecimentos em</h3>
 		<ul>
-			<li>JavaScript</li>
-			<li>CSS</li>
-			<li>HMTL</li>
-			<li>Angular</li>
 			<li>Python</li>
-			<li>TypeScript</li>
+			<li>Excel</li>
+			<li>SQL</li>
+			<li>PowerBI</li>
+			<li>Storytelling com dados</li>
+			<li>Análise de dados</li>
 		</ul>
 	</aside>
 	<figure>
-		<img
-			src="assets/images/myphoto.jpg"
-			alt="My photo"
-		/>
+		<img src="assets/images/myphoto.png" alt="My photo" />
 	</figure>
 </section>
