--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,12 +3,12 @@
 		src="assets/images/myPhotoMain.jpg"
 		alt="my photo"
 	/>
-	<h2>Olá! Eu sou o João 😁</h2>
-	<h1>Front-End<br />Angular developer</h1>
+	<h2>Olá! Eu sou o João Victor! 😁</h2>
+	<h1>Estudante de dados</h1>
 	<p>
 		<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na minha
 		jornada de aprendizado e crescimento! <br />
-		<strong>Principais habilidades: HTML, CSS, TypeScript e Angular.</strong>
+		<strong>Principais habilidades: Python, Excel, mySQL e PowerBI.</strong>
 	</p>
 	<app-btn
 		btnText="MEU CONTATO"
