--- a/src/app/components/btn/btn.component.html
+++ b/src/app/components/btn/btn.component.html
@@ -1,1 +1,1 @@
-<a href={{btnLink}} target={{btnTarget}}><button>{{btnText}}</button></a>
+<a href={{btnLink}} target={{btnTarget}}><button [ngClass]="getButtonClass()">{{btnText}}</button></a>
