--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,12 +3,28 @@
 	<p>
 		Esse portifólio é um projeto do qual eu sinto muito orgulho, assim como
 		todos os projetos presentes nele, eu amo aprender mais e crescer como um
-		programador, por isso caso você precise de um programdor, aqui está meu
-		contato 🙂
+		programador!🙂
 	</p>
-	<app-btn
-		btnText="Contato"
-		btnTarget="_blank"
-		btnLink="mailto:joaoferreirapaula005@gmail.com"
-	/>
+
+	<section class="buttonContainer">
+		<app-btn
+			btnText="Contato"
+			btnTarget="_blank"
+			btnLink="mailto:joaoferreirapaula005@gmail.com"
+		/>
+
+		<app-btn
+			btnText="Se conecte comigo"
+			btnTarget="_blank"
+			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
+			btnType="linkedin"
+		/>
+
+		<app-btn
+			btnText="Meu número"
+			btnTarget="_blank"
+			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
+			btnType="linkedin"
+		/>
+	</section>
 </section>
