--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,18 +1,24 @@
 <main class="hero container">
-	<img
-		src="assets/images/myPhotoMain.jpg"
-		alt="my photo"
-	/>
+	<img src="assets/images/myPhotoMain.jpg" alt="my photo" />
 	<h2>Olá! Eu sou o João Victor! 😁</h2>
 	<h1>Estudante de dados</h1>
 	<p>
 		<strong>Buscando oportunidade</strong>, sou um desenvolvedor júnior na minha
 		jornada de aprendizado e crescimento! <br />
-		<strong>Principais habilidades: Python, Excel, mySQL e PowerBI.</strong>
+		<strong>Principais habilidades: Python, Excel, SQL e PowerBI.</strong>
 	</p>
-	<app-btn
-		btnText="MEU CONTATO"
-		btnTarget="_blank"
-		btnLink="mailto:joaoferreirapaula005@gmail.com"
-	/>
+
+	<section>
+		<app-btn
+			btnText="MEU CONTATO"
+			btnTarget="_blank"
+			btnLink="mailto:joaoferreirapaula005@gmail.com"
+		/>
+		<app-btn
+			btnText="SE CONECTE COMIGO"
+			btnTarget="_blank"
+			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
+			btnType="linkedin"
+		/>
+	</section>
 </main>
