--- a/src/app/components/projects-images/projects-images.component.css
+++ b/src/app/components/projects-images/projects-images.component.css
@@ -38,7 +38,7 @@
 .description1 {
 	font-size: var(--size-s);
 	color: var(--clr-slate600);
-	margin: 0.5rem 0;
+	margin-left: 1rem;
 }
 
 .description1 {
