--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -18,6 +18,12 @@
     color: var(--clr-slate600);
 }
 
+.buttonContainer {
+    flex-direction: row;
+    column-gap: 1rem;
+}
+
+
 /* XS */
 @media (min-width: 475px) {
     .contact {
@@ -30,6 +36,11 @@
     
     .contact p {
         font-size: var(--size-base);
+    }
+
+    .buttonContainer {
+        flex-direction: row;
+		row-gap: 25px;
     }
 }
 
