--- a/src/app/components/featured/featured.component.css
+++ b/src/app/components/featured/featured.component.css
@@ -1,8 +1,17 @@
 .featured h2 {
 	font-size: var(--size-2xl);
-	color: var(--clr-slate400);
+	color: var(--clr-slate200);
     cursor: default;
     transition: transform 0.8s;
+    display: inline-block;
+    display: flex;
+    column-gap: 0.25rem;
+    cursor: pointer;
+    align-items: center;
+}
+
+.featured h2 svg {
+	max-height: var(--size-xl);
 }
 
 .featured h3 {
@@ -62,12 +71,17 @@
 
 .featured h2:hover {
     transform: scale(1.025);
+    text-decoration: underline;
 }
 
 @media (min-width: 475px) {
 	.featured h2 {
 		font-size: var(--size-3xl);
 	}
+
+    .featured h2 svg {
+        max-height: var(--size-2xl);
+    }
 
     .featuredLink {
         width: var(--size-3xl);
@@ -96,6 +110,10 @@
 	.featured h2 {
 		font-size: var(--size-4xl);
 	}
+
+    .featured h2 svg {
+        max-height: var(--size-3xl);
+    }
     
     .featuredLink {
         width: var(--size-4xl);
@@ -124,6 +142,10 @@
 		font-size: var(--size-5xl);
 	}
     
+    .featured h2 svg {
+        max-height: var(--size-4xl);
+    }
+
     .featured h3 {
         font-size: var(--size-2xl);
     }
@@ -151,6 +173,11 @@
     .featured h2 {
 		font-size: var(--size-6xl);
 	}
+
+    
+    .featured h2 svg {
+        max-height: var(--size-6xl);
+    }
     
     .featured h3 {
         font-size: var(--size-3xl);
