--- a/src/app/components/featured/featured.component.html
+++ b/src/app/components/featured/featured.component.html
@@ -1,30 +1,45 @@
 <section class="container featured">
 	<h3>Projeto em destaque</h3>
 	<div class="featuredLinkWrapper">
-		<a href="{{featuredLink}}" target="_blank" class="featuredLink">
-			<h2>{{featuredTitle}}</h2>
+		<a href="{{ featuredLink }}" target="_blank" class="featuredLink">
+			<h2>
+				{{ featuredTitle }}
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+					/></svg
+				>
+			</h2>
 		</a>
 	</div>
 	<p class="projectDescription">
-		{{featuredDescription}}
+		{{ featuredDescription }}
 	</p>
 
 	<article class="aboutProject">
 		<div class="label">
 			<h3>Tecnologias usadas:</h3>
 			<ul>
-				<li *ngFor="let tech of featuredTecnologies">{{tech}}</li>
+				<li *ngFor="let tech of featuredTecnologies">{{ tech }}</li>
 			</ul>
 		</div>
 
 		<div class="label">
 			<h3>Tipo do projeto:</h3>
-			<p>{{featuredType}}</p>
+			<p>{{ featuredType }}</p>
 		</div>
 
 		<div class="label">
 			<h3>Data da última versão:</h3>
-			<p>{{featuredVersion}}</p>
+			<p>{{ featuredVersion }}</p>
 		</div>
 	</article>
 </section>
