--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -31,8 +31,15 @@ h1 {
 p {
 	max-height: 60ch;
 	font-size: var(--size-s);
-	color: var(--clr-slate200);
+	color: var(--clr-slate400);
 }
+
+section {
+	display: flex;
+	flex-direction: column;
+	row-gap: 1rem;
+}
+
 
 @media (min-width: 475px) {
 	.hero {
@@ -54,6 +61,11 @@ p {
 
 	p {
 		font-size: var(--size-base);
+	}
+
+	section {
+		flex-direction: row;
+		column-gap: 20px;
 	}
 }
 
