--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,25 +6,5 @@
 		programador!🙂
 	</p>
 
-	<section class="buttonContainer">
-		<app-btn
-			btnText="Contato"
-			btnTarget="_blank"
-			btnLink="mailto:joaoferreirapaula005@gmail.com"
-		/>
-
-		<app-btn
-			btnText="Se conecte comigo"
-			btnTarget="_blank"
-			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
-			btnType="linkedin"
-		/>
-
-		<app-btn
-			btnText="Meu número"
-			btnTarget="_blank"
-			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
-			btnType="linkedin"
-		/>
-	</section>
+	<app-contact-btns></app-contact-btns>
 </section>
