--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <main class="hero container">
-	<img src="assets/images/myPhotoMain.jpg" alt="my photo" />
+	<img src="assets/images/myPhotoMain.png" alt="my photo" />
 	<h2>Olá! Eu sou o João Victor! 😁</h2>
 	<h1>Estudante de dados</h1>
 	<p>
@@ -8,17 +8,5 @@
 		<strong>Principais habilidades: Python, Excel, SQL e PowerBI.</strong>
 	</p>
 
-	<section>
-		<app-btn
-			btnText="MEU CONTATO"
-			btnTarget="_blank"
-			btnLink="mailto:joaoferreirapaula005@gmail.com"
-		/>
-		<app-btn
-			btnText="SE CONECTE COMIGO"
-			btnTarget="_blank"
-			btnLink="https://www.linkedin.com/in/joao-ferreira-paula-ti/"
-			btnType="linkedin"
-		/>
-	</section>
+	<app-contact-btns></app-contact-btns>
 </main>
